Fix the text that does not fit in the item box of the BitNav component #2853

--- a/src/BlazorUI/Bit.BlazorUI/Components/Nav/BitNav.Fluent.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Nav/BitNav.Fluent.scss
@@ -2,9 +2,10 @@
 
 @mixin getLinkStyle($hasUrl: true, $enabled: true) {
     position: relative;
-    display: block;
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: rem(44px);
+    min-height: rem(40px);
     border: rem(1px) solid transparent;
     border-radius: rem(2px);
     outline: transparent;
